add unit test for urls controller